kubernetes-objects/ingress-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
  namespace: traefik
spec:
  headers:
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
      - PATCH
      - DELETE
      - HEAD
    accessControlAllowOriginList:
      - https://url.net
    accessControlMaxAge: 100
    addVaryHeader: true
